--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -57,7 +57,7 @@ h2 {
 
 #sidebar {
     grid-area: sidebar;
-    background-color: #24455E;
+    background-color: $sidebar-background;
     border-right: 1px solid #233;
 }
 
