--- a/templates/editcontent/fields/select.twig
+++ b/templates/editcontent/fields/select.twig
@@ -31,7 +31,7 @@
                 create: true,
                 sortField: 'text',
                 maxItems: {{ multiple ? 'null' : '1' }},
-                closeAfterSelect: false
+                closeAfterSelect: true
             });
         });
     </script>
