--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,17 +1,17 @@
 html, body {
-    font-family: 'Source Sans Pro', serif;
-    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 13px;
     line-height: 1.5;
     height: 100%;
     margin: 0;
     padding: 0;
 
     @media only screen and (min-width: 1025px) {
-        font-size: 15px;
+        font-size: 14px;
     }
 
     @media only screen and (min-width: 1281px) {
-        font-size: 16px;
+        font-size: 15px;
     }
 }
 
@@ -19,9 +19,37 @@ body {
     background: #F8F8F8;
 }
 
-h2 {
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Source Sans Pro', serif;
     font-weight: normal;
 }
+
+h1 {
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    font-size: 1.25rem;
+}
+
+h6 {
+    font-size: 1rem;
+}
+
 
 .wrapper {
     display: grid;
@@ -38,7 +66,7 @@ h2 {
 @media only screen and (min-width: 600px)   {
     .wrapper {
         grid-template-columns: 12.6rem auto 21rem;
-        grid-template-rows: 3.4rem auto 2rem;
+        grid-template-rows: 3.6rem auto 2rem;
         grid-template-areas:
             "sidebar  topbar      topbar"
             "sidebar  content     aside"
@@ -47,7 +75,7 @@ h2 {
 
     .wrapper.has-widecontent {
         grid-template-columns: 12.6rem auto 21rem;
-        grid-template-rows: 3.4rem auto 2rem;
+        grid-template-rows: 3.6rem auto 2rem;
         grid-template-areas:
                 "sidebar  topbar      topbar"
                 "sidebar  content     content"
