--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -1,4 +1,10 @@
-$boltblue: rgb(30, 74, 107);
+$boltblue: #1E4A6B;
 $primaryboltblue: #0F0;
 $sidebar-background: #345;
 $sidebar-active: #41647F;
+
+// ----------
+$status-timed: #A80;
+$status-published: #7FA800;
+$status-held: #CA2300;
+$status-draft: #0569E2;
