--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,9 +1,9 @@
 @import 'settings';
+@import 'textstyles';
 @import 'layout';
 @import 'semantic-overrides';
 @import 'forms';
 @import 'listings';
 @import 'selectize';
-
 
 
