--- a/templates/_partials/_content_record_default.twig
+++ b/templates/_partials/_content_record_default.twig
@@ -16,9 +16,9 @@
         {% if not record.definition.singleton %}№ {{ record.id }}{% endif %}
         <br>
         <i class="fas fa-user fa-fw"></i>
-        {{ record.author.fullName }}
+        {{ record.author }}
         <br>
-        <i class="fas fa-circle status-published fa-fw"></i> {{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}<br>
+        <i class="fas fa-circle status-{{ record.status }} fa-fw"></i> {{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}<br>
         {#<i class="fa fa-align-left fa-fw"></i>#}
         {#<a href="{{ path('bolt_edit_record', {'id': record.id}) }}#taxonomy">#}
         {#Volgorde: 81#}
@@ -28,22 +28,7 @@
         <img src="{{ record.image|thumbnail(100, 72) }}">
     </td>
     <td class="listing-actions">
-
-        <div class="ui buttons small">
-            <div class="ui button small">
-                <a href="{{ path('bolt_edit_record', {'id': record.id}) }}">
-                    <i class="fas fa-edit"></i> Edit
-                </a>
-            </div>
-                <div class="ui floating pointing dropdown icon button small">
-                    <i class="dropdown icon"></i>
-                    <div class="menu">
-                    <div class="item"><i class="fas fa-link"></i> Remove Post</div>
-                    <div class="item"><i class="fas fa-edit"></i> Hide Post</div>
-                </div>
-            </div>
-        </div>
-
+        {% include '@bolt/_partials/_content_actions.twig' %}
 
     </td>
 
