--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -1,7 +1,10 @@
+
 $boltblue: #1E4A6B;
 $primaryboltblue: #0F0;
 $sidebar-background: #345;
 $sidebar-active: #41647F;
+
+$main-background: #F7F7F7;
 
 // ----------
 $status-timed: #A80;
