--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -4,9 +4,9 @@
         <thead>
         <tr>
             <th>Title / Excerpt</th>
-            <th style="min-width: 10em;">Meta</th>
+            <th>Meta</th>
             <th>Image</th>
-            <th style="min-width: 9em;">Actions</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
