--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -23,7 +23,7 @@
     </header>
 
     <div id="sidebar">
-            <Sidebar sidebarmenudata="{{ sidebarmenu()|json_encode() }}">side</Sidebar>
+            <Sidebar sidebarmenudata="{{ sidebarmenu() }}">side</Sidebar>
     </div>
 
     <div id="{% block container %}content{% endblock %}">
