--- a/templates/editcontent/fields/slug.twig
+++ b/templates/editcontent/fields/slug.twig
@@ -4,7 +4,7 @@
     <label>{{ label }}</label>
     <div class="ui labeled input">
         <div class="ui label">{{ field.slugPrefix }}</div>
-        <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" }} readonly>
+        <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" readonly>
         &nbsp;
         <div class="ui dropdown label">
             <div class="text"><i class="fas fa-unlock"></i> Locked</div>
@@ -16,5 +16,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
