--- a/templates/_partials/_widget_weather.twig
+++ b/templates/_partials/_widget_weather.twig
@@ -1,14 +1,13 @@
-<div class="ui card">
-  <div class="image"
+<div class=" card">
+  <div class="image card-img-top"
         style="background-image: url(https://source.unsplash.com/400x240/?rain,sun,snow,storm,weather,sunny); height: 200px; padding-top: 60px;">
-        <center style='text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4); color: #FFF;'>
-            <span>Sunny, with occasional clouds</span><br>
-            <span style="font-size: 200%;"><i class="fas fa-sun"></i> 18 &deg; C</span><br>
-            <span>Den Haag, Netherlands</span>
-        </center>
-
+    <center style='text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4); color: #FFF;'>
+        <span>Sunny, with occasional clouds</span><br>
+        <span style="font-size: 200%;"><i class="fas fa-sun"></i> 18 &deg; C</span><br>
+        <span>Den Haag, Netherlands</span>
+    </center>
   </div>
-  <div class="extra content">
+  <div class="card-body">
     <a>
       <i class="fa fa-socks"></i>
       This is a random widget
