--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -1,13 +1,13 @@
 
 {% if records %}
-    <table class="ui very basic striped table">
+    <table class="table table-striped">
         <thead>
-        <tr>
-            <th>Title / Excerpt</th>
-            <th>Meta</th>
-            <th>Image</th>
-            <th>Actions</th>
-        </tr>
+            <tr>
+                <th>Title / Excerpt</th>
+                <th>Meta</th>
+                <th>Image</th>
+                <th>Actions</th>
+            </tr>
         </thead>
         <tbody>
 
