--- a/templates/content/listing.twig
+++ b/templates/content/listing.twig
@@ -18,11 +18,11 @@
 
 {% block aside %}
 
-    <div class="ui card">
-        <div class="content">
-            <div class="header">Contentlisting</div>
+    <div class="card">
+        <div class="card-header">
+            Contentlisting
         </div>
-        <div class="content">
+        <div class="card-body">
             (filtering options go here)
         </div>
     </div>
