--- a/templates/finder/_folders.twig
+++ b/templates/finder/_folders.twig
@@ -1,6 +1,6 @@
 
-<table class="ui celled table">
-    <thead>
+<table class="table table-striped" style="background-color: #FFF;">
+    <thead class="thead-light">
     <tr>
         <th></th>
         <th>Directoryname</th>
