--- a/templates/editcontent/fields/_base.twig
+++ b/templates/editcontent/fields/_base.twig
@@ -3,6 +3,9 @@
     {% set label = field.definition.label|default(field.name|ucwords) ~ ':' %}
 {% endif %}
 
+{% set prefix = prefix|default(field.prefix|default()) %}
+{% set postfix = postfix|default(field.postfix|default()) %}
+
 {% if not name|default() %}
     {%  set name = 'fields[' ~ field.name ~ ']' %}
 {% endif %}
@@ -18,6 +21,7 @@
 {% if not class|default() %}
     {% set class = field.definition.class|default() %}
 {% endif %}
+{% set class = "form-control " ~ class %}
 
 {% if not id|default() %}
     {% set id = 'field-' ~ field.name|default(name) %}
@@ -25,8 +29,15 @@
 {%- endspaceless -%}
 
 <!-- field "{{ label }} {{ name }}" -->
-<div class="field">
+<div class="form-group">
+{% if prefix %}
+    <small id="{{name}}_prefix" class="form-text text-muted">{{ prefix }}</small>
+{% endif %}
 {% block field %}
 
+
 {% endblock %}
+{% if postfix %}
+    <small id="{{name}}_postfix" class="form-text text-muted">{{ postfix }}</small>
+{% endif %}
 </div>
