--- a/templates/finder/editfile.twig
+++ b/templates/finder/editfile.twig
@@ -19,7 +19,7 @@
             <textarea name="editfile" id="editfile_textarea">{{ contents }}</textarea>
         </div>
         <div class="field">
-            <button type="submit" class="ui button primary" name="save">Save</button>
+            <button type="submit" class="btn btn-primary" name="save">Save</button>
         </div>
     </div>
     </form>
