--- a/templates/users/change_password.twig
+++ b/templates/users/change_password.twig
@@ -14,7 +14,7 @@
 
  {{ form_start(form) }}
  {{ form_widget(form) }}
- <button type="submit" class="ui button primary">
+ <button type="submit" class="btn btn-primary">
      <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
  </button>
  {{ form_end(form) }}
@@ -22,7 +22,7 @@
 
 {% block aside %}
  <div class="section">
-     <a href="{{ path('bolt_profile_edit') }}" class="ui button negative">
+     <a href="{{ path('bolt_profile_edit') }}" class="btn btn-danger">
          <i class="fa fa-edit" aria-hidden="true"></i> {{ 'action.edit_user'|trans }}
      </a>
  </div>
