--- a/templates/users/edit.twig
+++ b/templates/users/edit.twig
@@ -11,7 +11,7 @@
     {% form_theme form 'form/semantic-ui-theme.twig' %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button type="submit" class="ui button primary">
+    <button type="submit" class="btn btn-primary">
         <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
     </button>
     {{ form_end(form) }}
@@ -20,7 +20,7 @@
 
 {% block aside %}
  <div class="section">
-     <a href="{{ path('bolt_change_password') }}" class="ui button negative">
+     <a href="{{ path('bolt_change_password') }}" class="btn btn-danger">
          <i class="fa fa-lock" aria-hidden="true"></i> {{ 'action.change_password'|trans }}
      </a>
  </div>
