--- a/templates/users/change_password.twig
+++ b/templates/users/change_password.twig
@@ -6,10 +6,10 @@
 
 {% block main %}
 
-    {% form_theme form 'form/semantic-ui-theme.twig' %}
+    {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
-    <div class="ui warning message">
-        <p>{{ 'info.change_password'|trans }}</p>
+    <div class="alert alert-warning">
+        {{ 'info.change_password'|trans }}
     </div>
 
  {{ form_start(form) }}
