--- a/templates/users/edit.twig
+++ b/templates/users/edit.twig
@@ -8,7 +8,7 @@
 
 {% block main %}
 
-    {% form_theme form 'form/semantic-ui-theme.twig' %}
+    {% form_theme form 'bootstrap_4_layout.html.twig' %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <button type="submit" class="btn btn-primary">
