--- a/templates/_partials/_pager.twig
+++ b/templates/_partials/_pager.twig
@@ -1,6 +1,6 @@
 {% if records.haveToPaginate|default() %}
     <div class="navigation text-center">
-        {{ pagerfanta(records, 'semantic_ui_translated', {
+        {{ pagerfanta(records, 'twitter_bootstrap4_translated', {
             routeName: 'bolt_contentlisting',
             routeParams: { 'contenttype': contenttype.slug|default() }
         }) }}
