--- a/templates/editcontent/fields/slug.twig
+++ b/templates/editcontent/fields/slug.twig
@@ -2,18 +2,27 @@
 
 {% block field %}
     <label>{{ label }}</label>
-    <div class="ui labeled input">
-        <div class="ui label">{{ field.slugPrefix }}</div>
-        <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" readonly>
-        &nbsp;
-        <div class="ui dropdown label">
-            <div class="text"><i class="fas fa-unlock"></i> Locked</div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-                <div class="item"><i class="fas fa-unlock fa-fw"></i> Locked</div>
-                <div class="item"><i class="fas fa-link fa-fw"></i> Generate from: {{ field.slugUseFields|join(', ') }}</div>
-                <div class="item"><i class="fas fa-pencil-alt fa-fw"></i> Edit</div>
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text">{{ field.slugPrefix }}</span>
+        </div>
+        <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" readonly="readonly">
+        <div class="input-group-append">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-unlock"></i> Locked
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item">
+                    <i class="fas fa-unlock fa-fw"></i> Locked
+                </a>
+                <a class="dropdown-item">
+                    <i class="fas fa-link fa-fw"></i> Generate from: {{ field.slugUseFields|join(', ') }}
+                </a>
+                <a class="dropdown-item">
+                    <i class="fas fa-pencil-alt fa-fw"></i> Edit
+                </a>
             </div>
         </div>
     </div>
+
 {% endblock %}
