--- a/templates/security/login.twig
+++ b/templates/security/login.twig
@@ -18,32 +18,14 @@
 
         body {
             background: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        body > .grid {
-            height: 100%;
-        }
-
-        .image {
-            margin-top: -100px;
-        }
-
-        .column {
-            max-width: 382px;
-        }
-
-        .field, .message {
-            text-align: left;
-        }
-
-        .ui.raised.card {
-            width: 360px;
-        }
-
-        fieldset {
-            border: 0;
-            margin: 0;
-            padding: 0;
+        .card {
+            width: 22rem;
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
         }
 
     </style>
@@ -51,58 +33,58 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {#<script src="{{ asset('build/js/login.js') }}"></script>#}
-
-
-
 {% endblock %}
 
 {% block main %}
+<div class="card">
 
-<div class="ui middle aligned center aligned grid">
-    <div class="column">
-        <form action="{{ path('bolt_login') }}" method="post" class="ui form">
-            <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}" />
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+    <div class="card-header">
 
-            <fieldset>
-                <div class="ui card raised">
-                    <div class="content">
-                        <div class="header"><i class="fa fa-lock" aria-hidden="true"></i> Bolt &raquo; Login </div>
-                    </div>
-                    <div class="content">
-                        {% if error %}
-                            <div class="ui negative message">
-                                <i class="fas fa-exclamation-circle"></i>
-                                {{ error.messageKey|trans(error.messageData, 'security') }}
-                            </div>
-                        {% endif %}
-                        <div class="field">
-                            <label for="username">{{ 'label.username'|trans }}</label>
-                            <input type="text" placeholder="{{ 'label.username'|trans }}" id="username" name="username"
-                                value="{{ last_username }}" class="form-control" />
-                        </div>
-                        <div class="field">
-                            <label for="password">{{ 'label.password'|trans }}</label>
-                            <input type="password" placeholder="{{ 'label.password'|trans }}" id="password" name="password"
-                                class="form-control" />
-                        </div>
-                        <div class="field">
-                            <div class="ui checkbox">
-                                <input type="checkbox" name="_remember_me" id="_remember_me">
-                                <label for="_remember_me">Remember me</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <button type="submit" class="ui button primary">
-                            <i class="fas fa-sign-in-alt" aria-hidden="true"></i> {{ 'action.log_in'|trans }}
-                        </button>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
+        <i class="fa fa-lock" aria-hidden="true"></i>
+        Bolt &raquo; Login
     </div>
+
+    <div class="card-body">
+
+        {% if error %}
+            <div class="alert alert-danger">
+                <i class="fas fa-exclamation-circle"></i>
+                {{ error.messageKey|trans(error.messageData, 'security') }}
+            </div>
+        {% endif %}
+
+        <form action="{{ path('bolt_login') }}" method="post" class="">
+            <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}"/>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
+
+            <div class="form-group">
+                <label for="username">{{ 'label.username_or_email'|trans }}</label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                    </div>
+                    <input type="text" placeholder="{{ 'label.username'|trans }}" id="username" name="username" value="{{ last_username }}" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">{{ 'label.password'|trans }}</label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                    </div>
+                    <input type="password" placeholder="{{ 'label.password'|trans }}" id="password" name="password" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" name="_remember_me" id="_remember_me">
+                <label class="form-check-label" for="_remember_me">{{ 'label.rememberme'|trans }}</label>
+            </div>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-sign-in-alt" aria-hidden="true"></i>
+                {{ 'action.log_in'|trans }}
+            </button>
+        </div>
+    </form>
 </div>
 
 {% endblock %}
