--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -1,13 +1,12 @@
-
-$boltblue: #1E4A6B;
-$primaryboltblue: #0F0;
+$boltblue: #1e4a6b;
+$primaryboltblue: #0f0;
 $sidebar-background: #345;
-$sidebar-active: #41647F;
+$sidebar-active: #41647f;
 
-$main-background: #F7F7F7;
+$main-background: #f7f7f7;
 
 // ----------
-$status-timed: #A80;
-$status-published: #7FA800;
-$status-held: #CA2300;
-$status-draft: #0569E2;
+$status-timed: #a80;
+$status-published: #7fa800;
+$status-held: #ca2300;
+$status-draft: #0569e2;
