--- a/templates/_partials/_widget_weather.twig
+++ b/templates/_partials/_widget_weather.twig
@@ -1,4 +1,4 @@
-<div class=" card">
+<div class="card mb-4">
   <div class="image card-img-top"
         style="background-image: url(https://source.unsplash.com/400x240/?rain,sun,snow,storm,weather,sunny); height: 200px; padding-top: 60px;">
     <center style='text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4); color: #FFF;'>
