--- a/templates/finder/finder.twig
+++ b/templates/finder/finder.twig
@@ -18,11 +18,9 @@
 
 {% block aside %}
 
-<div class="ui card">
-    <div class="content">
-        <div class="header">Meta information</div>
-    </div>
-    <div class="content">
+<div class="card">
+    <div class="card-header">Meta information</div>
+    <div class="card-body">
 
     </div>
 </div>
