--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,9 +1,7 @@
-@import 'settings';
-@import 'textstyles';
-@import 'layout';
-@import 'semantic-overrides';
-@import 'forms';
-@import 'listings';
-@import 'selectize';
-
-
+@import "settings";
+@import "textstyles";
+@import "layout";
+@import "bootstrap-overrides";
+@import "forms";
+@import "listings";
+@import "selectize";
