--- a/templates/_partials/_content_actions.twig
+++ b/templates/_partials/_content_actions.twig
@@ -4,10 +4,10 @@
 {% set permissions = { 'publish': true, 'depublish': true, 'create': true, 'delete': true } %}
 
 <div class="btn-group">
-    <a href="{{ path('bolt_edit_record', {'id': record.id}) }}" class="btn btn-secondary">
+    <a href="{{ path('bolt_edit_record', {'id': record.id}) }}" class="btn btn-light">
         <i class="fas fa-edit"></i> {{ __('edit') }}
     </a>
-    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
     </button>
   <div class="dropdown-menu dropdown-menu-right">
