--- a/templates/finder/_files.twig
+++ b/templates/finder/_files.twig
@@ -24,7 +24,7 @@
         {% set dimensions = '' %}
 
         {% if extension in imageformats %}
-            {% set thumbnail = filename|thumbnail(100, 72) %}
+            {% set thumbnail = filename|thumbnail(width = 100, height = 72, area = area) %}
             {% set icon = 'fa-image' %}
             {% set link = path('bolt_media_new', {'area': area, 'file': filename}) %}
 
