--- a/templates/editcontent/fields/image.twig
+++ b/templates/editcontent/fields/image.twig
@@ -43,12 +43,12 @@
 
         </div>
         <div class="col-4" id="{{ id }}-uploader" style="padding: 0; min-height: 180px;">
-            <file-pond name="filepond[]" ref="pond" accepted-file-types="image/jpeg, image/png" server="/async/upload"></file-pond>
+            {# <file-pond name="filepond[]" ref="pond" accepted-file-types="image/jpeg, image/png" server="/async/upload"></file-pond> #}
         </div>
 
     </div>
 
-    <style>
+    {# <style>
         #{{ id }}-uploader {
             background-image: url({{ field.get('filename')|thumbnail(width=400, height=300, area='files') }});
             background-repeat: no-repeat;
@@ -57,5 +57,5 @@
         .filepond--root {
             margin: 0;
         }
-    </style>
+    </style> #}
 {% endblock %}
