Added the base of Markdown & HTML components

--- a/templates/editcontent/fields/markdown.twig
+++ b/templates/editcontent/fields/markdown.twig
@@ -1,7 +1,10 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <label>{{ label }}</label>
-    <textarea name="{{ name }}" class="{{ class }}" id="{{ name }}">{{ value }}</textarea>
+    <editor-markdown 
+        :value="'{{value|json_encode()}}'"
+        :label="'{{ label }}'"
+        :name="'{{ name }}'"
+    ></editor-markdown>
 {% endblock %}
 
