--- a/templates/editcontent/javascripts/markdown.twig
+++ b/templates/editcontent/javascripts/markdown.twig
@@ -1,11 +1,11 @@
 {% extends '@bolt/editcontent/javascripts/_base.twig' %}
 
 {% block javascripts %}
-<script>
+{# <script>
     var simplemde = new SimpleMDE({
         element: document.getElementById("{{ name }}"),
         spellChecker: false,
         status: false
     });
-</script>
+</script> #}
 {% endblock %}
