--- a/templates/editcontent/fields/html.twig
+++ b/templates/editcontent/fields/html.twig
@@ -1,6 +1,9 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <label>{{ label }}</label>
-    <textarea name="{{ name }}" class="{{ class }}">{{ value }}</textarea>
+    <editor-html 
+        :value="'{{value|json_encode()}}'"
+        :label="'{{ label }}'"
+        :name="'{{ name }}'"
+    ></editor-html>
 {% endblock %}
