--- a/templates/editcontent/javascripts/image.twig
+++ b/templates/editcontent/javascripts/image.twig
@@ -2,7 +2,7 @@
 
 
 {% block javascripts %}
-    <script>
+    {# <script>
         FilePond.registerPlugin(
             FilePondPluginFileMetadata,
             FilePondPluginImagePreview
@@ -31,5 +31,5 @@
             document.querySelector("#{{ id }}-uploader").style.background = 'none';
         });
 
-    </script>
+    </script> #}
 {% endblock %}
