--- a/templates/editcontent/fields/select.twig
+++ b/templates/editcontent/fields/select.twig
@@ -11,7 +11,19 @@
 {% endif %}
 
 {% block field %}
-    <div class="ui grid">
+    {% if multiple %}
+        Multi
+    {% else %}
+        <editor-select
+            :value="'{{ value }}'"
+            :label="'{{ label }}'"
+            :name="'{{ name }}'"
+            :id="'{{ id }}'"
+            :options="'{{ options|json_encode() }}'"
+        ></editor-select>
+    {% endif %}
+
+    {# <div class="ui grid">
         <div class="four wide column"><label>{{ label }}</label></div>
         <div class="twelve wide column">
             <select name="{{ name }}[]" id="{{ id }}" {{ multiple ? 'multiple' : '' }} {{ attributes|default()|raw }}>
@@ -20,5 +32,5 @@
                 {% endfor %}
             </select>
         </div>
-</div>
+    </div> #}
 {% endblock %}
